--- a/yatube/templates/posts/includes/switcher.html
+++ b/yatube/templates/posts/includes/switcher.html
@@ -1,15 +1,17 @@
 <!-- templates/posts/includes/switcher.html -->
 {% if user.is_authenticated %}
-{% with request.resolver_match.view_name as view_name %}
-<div class="row my-3">
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link {% if view_name == 'index:index' %}active{% endif %}" href="{% url 'posts:index' %}">Все авторы</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link {% if view_name == 'index:follow_index' %}active{% endif %}" href="{% url 'posts:follow_index' %}">Избранные авторы</a>
-    </li>
-  </ul>
-</div>
-{% endwith %}
+  <div class="row my-3">
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link {% if index %}active{% endif %}" href="{% url 'posts:index' %}">
+          Все авторы
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if follow %}active{% endif %}" href="{% url 'posts:follow_index' %}">
+          Избранные авторы
+        </a>
+      </li>
+    </ul>
+  </div>
 {% endif %}
