--- a/yatube/templates/posts/includes/paginator.html
+++ b/yatube/templates/posts/includes/paginator.html
@@ -1,4 +1,5 @@
 <!-- templates/posts/includes/paginator.html -->
+<div class="d-flex justify-content-center">
 {% if page_obj.has_other_pages %}
 <nav aria-label="Page navigation" class="my-5">
   <ul class="pagination">
@@ -36,3 +37,4 @@
   </ul>
 </nav>
 {% endif %}
+</div>
