--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -17,7 +17,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
       <title>{% block title %}{% endblock %}</title>
   </head>
-    <body> 
+    <body class="bg-white"> 
     {% include 'includes/header.html' %}
     <main>
       <div class="container py-5">
