--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="border-top text-center py-3">
-    <p>©{% now 'Y' %} Copyright <span style="color:red">Ya</span>tube</p>
+<footer class="border-top text-center py-3 bg-dark" style="color:white">
+    <p>©{% now 'Y' %} Copyright <span style="color:red">Py</span>Blog</p>
 </footer>
