--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,26 +1,26 @@
 {% load static %}
 <header>
-<nav class="navbar navbar-expand-md navbar-light" style="background-color: lightskyblue">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="background-color: #e3f2fd;">
   <div class="container">
     <a class="navbar-brand" href="{% url 'posts:index' %}">
       <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-      <span style="color:red">Ya</span>tube
+      <span style="color:red">Py</span>Blog
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="nav nav-pills text-right" >
+    <ul class="nav nav-pills nav-fill" >
       {% with request.resolver_match.view_name as view_name %}
       <li class="nav-item"> 
-        <a class="nav-link {% if view_name == 'about:author' %}active{% endif %}" href="{% url 'about:author' %}">Об авторе</a>
+        <a class="nav-link link-light {% if view_name == 'about:author' %}active{% endif %}" href="{% url 'about:author' %}">Об авторе</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link {% if view_name == 'about:tech' %}active{% endif %}" href="{% url 'about:tech' %}">Технологии</a>
+        <a class="nav-link link-light {% if view_name == 'about:tech' %}active{% endif %}" href="{% url 'about:tech' %}">Технологии</a>
       </li>
       {% if user.is_authenticated %}
       <li class="nav-item"> 
-        <a class="nav-link {% if view_name == 'posts:create' %}active{% endif %}" href="{% url 'posts:create' %}">Новая запись</a>
+        <a class="nav-link link-light {% if view_name == 'posts:create' %}active{% endif %}" href="{% url 'posts:create' %}">Новая запись</a>
       </li>
       <li class="nav-item"> 
         <a class="nav-link link-light {% if view_name == 'users:password_change' %}active{% endif %}" href="{% url 'users:password_change' %}">Изменить пароль</a>
@@ -29,7 +29,7 @@
         <a class="nav-link link-light {% if view_name == 'users:logout' %}active{% endif %}" href="{% url 'users:logout' %}">Выйти</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Пользователь: {{ user.username }}</a>
+        <a class="nav-link link-light">Пользователь: {{ user.username }}</a>
       </li>
       {% else %}
       <li class="nav-item"> 
