--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,36 +1,19 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
-{% include 'posts/includes/switcher.html' with index=True %}
-{% for post in page_obj %}
-<ul>
-  <li>
-      Автор: <a href="{% url 'posts:profile' post.author %}">
-        {% if post.author.get_full_name %}{{ post.author.get_full_name }}{% else %}{{ post.author }}{% endif %}
-      </a>
-  </li>
-  <li>
-      Дата публикации: <strong>{{ post.pub_date|date:'d E Y' }}</strong>
-  </li>
-</ul>
-<div class="card bg-light" style="width: 100%">
-  {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-  <img class="card-img-top" src="{{ im.url }}">
-  {% endthumbnail %}
-  <div class="card-body">
-    <h4 class="card-title">Заголовок</h4>
-    <p class="card-text">
-      {{ post.text|linebreaksbr }}
-    </p>
-    <a href="{% url 'posts:post_detail' post.id %}" class="btn btn-primary">Подробная информация</a>  
-    {% if post.group %}
-      <a href="{% url 'posts:group_list' post.group.slug %}" class="btn btn-primary">Все записи группы "{{ post.group }}"</a>
-    {% endif %}
-  </div>
+<div class="row shadow-lg p-2 mb-2 bg-white rounded">
+  {% include 'posts/includes/switcher.html' with index=True %}
+  {% for post in page_obj %}
+    {% include 'posts/includes/ul_posts.html' %}
+    {% include 'posts/includes/post_block.html' %}
+    <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
+        <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Подробная информация</button></a>  
+        {% if post.group %}
+        <a href="{% url 'posts:group_list' post.group.slug %}"><button type="button" class="btn btn-outline-primary btn-sm">Все записи группы {{ post.group }}</button></a>
+        {% endif %}
+    </div>
+    {% if not forloop.last %}{% endif %}
+  {% endfor %}
+  {% include 'posts/includes/paginator.html' %}
 </div>
-
-{% if not forloop.last %}<hr>{% endif %}
-{% endfor %}
-{% include 'posts/includes/paginator.html' %}
 {% endblock %}
