--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
 {% block title %}
     {% if author.get_full_name %}
         {{ author.get_full_name }}
@@ -8,55 +7,40 @@
     {% endif %} профайл пользователя
 {% endblock %}
 {% block content %}
-
-<div class="card bg-light" style="width: 100%">
-    <div class="card-body">
-        <h1 class="card-title">Все посты пользователя {% if author.get_full_name %}{{ author.get_full_name }}{% else %}{{ author }}{% endif %}</h1>
-        <h3 class="card-text">Всего постов: {{ page_obj.paginator.count }}</h3>
-        {% if request.user != author %}
-            {% if following %}
-                <a
-                class="btn btn-lg btn-light"
-                href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-                >
-                Отписаться
-                </a>
+<div class="row shadow-lg p-2 mb-2 bg-white rounded">
+    <div class="card" style="width: 100%">
+        <div class="card-body">
+            <h1 class="card-title">Все посты пользователя {% if author.get_full_name %}{{ author.get_full_name }}{% else %}{{ author }}{% endif %}</h1>
+            <h3 class="card-text">Всего постов: {{ page_obj.paginator.count }}</h3>
+            
+            {% if request.user != author %}
+                {% if following %}
+                    <a class="btn btn-lg btn-light" href="{% url 'posts:profile_unfollow' author.username %}" role="button">Отписаться</a>
                 {% else %}
-                <a
-                    class="btn btn-lg btn-primary"
-                    href="{% url 'posts:profile_follow' author.username %}" role="button"
-                >
-                Подписаться
-                </a>
+                    <a class="btn btn-lg btn-primary" href="{% url 'posts:profile_follow' author.username %}" role="button">Подписаться</a>
+                {% endif %}
             {% endif %}
-        {% endif %}
+        </div>
     </div>
-</div>
 
-{% for post in page_obj %}
-    <ul class="list-group">
-        <li class="list-group-item list-group-item-light">
-        Дата публикации: <strong>{{ post.pub_date|date:'d E Y' }}</strong>
-        </li>
-    </ul>
-<div class="card bg-light" style="width: 100%">
-    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img-top" src="{{ im.url }}">
-    {% endthumbnail %}
-    <div class="card-body">
-        <h4 class="card-title">Заголовок</h4>
-        <p class="card-text">
-            {{ post.text|linebreaksbr }}
-        </p>
-        <a href="{% url 'posts:post_detail' post.id %}" class="btn btn-primary">Подробная информация</a>  
-        {% if post.group %}
-            <a href="{% url 'posts:group_list' post.group.slug %}" class="btn btn-primary">Все записи группы "{{ post.group }}"</a>
-        {% endif %}
-    </div>
-</div>
-{% if not forloop.last %}<hr>{% endif %}
-{% endfor %}
-<div class="d-flex justify-content-center">
-    <div>{% include 'posts/includes/paginator.html' %}</div>
+    {% for post in page_obj %}
+
+        <ul class="list-group shadow-lg p-1 mb-1 bg-white rounded">
+            <li class="list-group-item list-group-item-light">
+            Дата публикации: <strong>{{ post.pub_date|date:'d E Y' }}</strong>
+            </li>
+        </ul>
+
+        {% include 'posts/includes/post_block.html' %}
+
+        <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
+            <a href="{% url 'posts:post_detail' post.id %}"><button type="button" class="btn btn-outline-primary btn-sm">Подробная информация</button></a>  
+            {% if post.group %}
+            <a href="{% url 'posts:group_list' post.group.slug %}"><button type="button" class="btn btn-outline-primary btn-sm">Все записи группы {{ post.group }}</button></a>
+            {% endif %}
+        </div>
+        {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
+    {% include 'posts/includes/paginator.html' %}
 </div>
 {% endblock %}
