--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,31 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Пост {{ post|truncatechars:30 }}{% endblock %}
+{% block title %}{{ post.title }}{% endblock %}
 {% block content %}
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
-  <aside class="col-12 col-md-3 shadow-lg p-2 mb-2 bg-white rounded">
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">
-        Дата публикации: {{ post.pub_date|date:'d E Y' }}
-      </li>
-        {% if post.group %}
-        <li class="list-group-item">
-          Группа: {{ post.group }}
-          <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-        </li>
-        {% endif %}
-      <li class="list-group-item">
-        Автор: {% if post.author.get_full_name %}{{ post.author.get_full_name }}{% else %}{{ post.author }}{% endif %}
-      </li>
-      <li class="list-group-item">
-        Всего постов автора: {{ post.author.posts.count }}
-      </li>
-      <li class="list-group-item">
-        <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
-      </li>
-    </ul>
-  </aside>
-  
+  {% include 'posts/includes/aside.html' %}
   <article class="col-12 col-md-9">
     {% include 'posts/includes/post_block.html' %}
     <div class="card-body shadow-lg p-2 mb-2 bg-white rounded">
@@ -68,8 +46,28 @@
       {% for comment in comments %}
       <div class="card mb-2 shadow-lg p-2 mb-2 bg-white rounded" style="max-width: 100%;">
         <div class="row no-gutters">
-          <div class="col-md-2">
-            <img src="{% static 'img/no_img.png' %}" class="card-img" alt="...">
+          <div class="col-md-2 text-center">
+            {% load thumbnail %}
+            <button type="button" class="btn" data-toggle="modal" data-target=".bd-example-modal-lg">
+            {% thumbnail prof.avatar "1000" as big %}
+                {% thumbnail prof.avatar "x80" as small %}
+                    <img src="{{ small.url }}">
+                {% endthumbnail %}
+                {% empty %}
+                <div class="col-md-12">
+                    <img src="{% static 'img/no_img.png' %}" class="card-img" alt="нет фото">
+                </div>
+            {% endthumbnail %}
+            </button>
+            <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        {% thumbnail prof.avatar "x600" crop="center" as small %}
+                            <img src="{{ small.url }}">
+                        {% endthumbnail %}
+                    </div>
+                </div>
+            </div>
           </div>
           <div class="col-md-8">
             <div class="card-body">
