--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -29,7 +29,9 @@
         <a class="nav-link link-light {% if view_name == 'users:logout' %}active{% endif %}" href="{% url 'users:logout' %}">Выйти</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link link-light">Пользователь: {{ user.username }}</a>
+        <a class="nav-link link-light" href="{% url 'posts:user_profile' user.username %}" >
+        Пользователь: {{ user.username }}
+        </a>
       </li>
       {% else %}
       <li class="nav-item"> 
