--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,15 +1,23 @@
 {% load static %}
 <header>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="{% url 'posts:index' %}">
       <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
       <span style="color:red">Py</span>Blog
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <button 
+      class="navbar-toggler my-3"
+      type="button"
+      data-toggle="collapse"
+      data-target="#collapsibleNavbar"
+      aria-controls="collapsibleNavbar" 
+      aria-expanded="false" 
+      aria-label=" navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
     <ul class="nav nav-pills nav-fill" >
       {% with request.resolver_match.view_name as view_name %}
       <li class="nav-item"> 
