--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -14,11 +14,13 @@
             <h1 class="card-title">Все посты пользователя {% if author.get_full_name %}{{ author.get_full_name }}{% else %}{{ author }}{% endif %}</h1>
             <h3 class="card-text">Всего постов: {{ page_obj.paginator.count }}</h3>
             
-            {% if request.user != author %}
-                {% if following %}
-                    <a class="btn btn-lg btn-light" href="{% url 'posts:profile_unfollow' author.username %}" role="button">Отписаться</a>
-                {% else %}
-                    <a class="btn btn-lg btn-primary" href="{% url 'posts:profile_follow' author.username %}" role="button">Подписаться</a>
+            {% if user.is_authenticated %}
+                {% if request.user != author %}
+                    {% if following %}
+                        <a class="btn btn-lg btn-light" href="{% url 'posts:profile_unfollow' author.username %}" role="button">Отписаться</a>
+                    {% else %}
+                        <a class="btn btn-lg btn-primary" href="{% url 'posts:profile_follow' author.username %}" role="button">Подписаться</a>
+                    {% endif %}
                 {% endif %}
             {% endif %}
         </div>
